--- a/opdracht/website/css/style.css
+++ b/opdracht/website/css/style.css
@@ -1,5 +1,5 @@
 body{
-    background-color: aquamarine;
+    background-color: rgb(255, 231, 11);
 }
 
 div h1{
@@ -21,13 +21,13 @@ div h1{
 }
 
 #poster1{
-    background-color: blue;
+    background-color: rgb(36, 218, 30);
 }
 
 #poster2{
-    background-color: blue;
+    background-color: rgb(231, 100, 24);
 }
 
 #poster3{
-    background-color: blue;
+    background-color: rgb(255, 0, 0);
 }
