--- a/opdracht/website/css/style.css
+++ b/opdracht/website/css/style.css
@@ -1,18 +1,18 @@
 body{
-    background-color: rgb(255, 231, 11);
+    background-color: rgb(102, 200, 245);
 }
 
 div h1{
     width: 200px;
 }
 
-
+.
 .poster{
     display: inline-block;
     margin: 20px;
     padding: 20px;
     border-radius: 10px;
-    box-shadow: 10px 10px 20px black;
+    box-shadow: 10px 10px 20px rgb(0, 0, 0);
 }
 
 .posterimg{
@@ -21,13 +21,13 @@ div h1{
 }
 
 #poster1{
-    background-color: rgb(36, 218, 30);
+    background-color: rgb(27, 116, 122);
 }
 
 #poster2{
-    background-color: rgb(231, 100, 24);
+    background-color: rgb(35, 108, 218);
 }
 
 #poster3{
-    background-color: rgb(255, 0, 0);
+    background-color: rgb(0, 49, 185);
 }
