--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,3 @@
 <h1>Dit is een heading</h1>
 <p>dit is een paragraaf</p>
- <img src=http://scircula.com/wp-content/uploads/2021/06/ocean.jpeg
+ <img src="https://www.allesoverdubai.info/wordpress/wp-content/uploads/2015/07/stranden-in-dubai-1680x700.jpg">
